@@ -358,43 +358,19 @@ DONE_LLR:
   mpz_clear(k); mpz_clear(v);
   return res;
 }
-/* Returns:  -1 not Proth form, 0 maybe composite, 2 definitely prime */
-int is_proth_prime(mpz_t N, UV ntests)
+static int is_proth_form(mpz_t N)
 {
   mpz_t v, k;
   UV n;
-  int res = -1;
-
+  int res = 0;
   if (mpz_cmp_ui(N,100) <= 0) return (_GMP_is_prob_prime(N) ? 2 : 0);
   if (mpz_even_p(N) || mpz_divisible_ui_p(N, 3)) return 0;
-
   mpz_init(v); mpz_init(k);
   mpz_sub_ui(v, N, 1);
   n = mpz_scan1(v, 0);
   mpz_tdiv_q_2exp(k, v, n);
   /* N = k * 2^n + 1 */
-  if (mpz_sizeinbase(k,2) > n)
-    goto DONE_PROTH;
-
-  {
-    mpz_t n2, t;
-    UV i, p;
-    PRIME_ITERATOR(iter);
-
-    mpz_init(n2); mpz_init(t);
-    mpz_tdiv_q_2exp(n2, v, 1);   /* v = (N-1)   n2 = (N-1)/2; */
-    for (i = 0, p = 2, res = 0; i < ntests; i++) {
-      p = prime_iterator_next(&iter);
-      mpz_set_ui(t, p);
-      mpz_powm(t, t, n2, N);
-      if (!mpz_cmp(t, v)) { res = 2; break; }
-    }
-    prime_iterator_destroy(&iter);
-    mpz_clear(t); mpz_clear(n2);
-  }
-
-DONE_PROTH:
-  if (res != -1 && get_verbose_level() > 1) printf("N shown %s with PROTH (%lu)\n", res ? "prime" : "maybe composite", (unsigned long)ntests);
+  if (mpz_sizeinbase(k,2) <= n)  res = 1;
   mpz_clear(k); mpz_clear(v);
   return res;
 }
@@ -1114,9 +1090,6 @@ int _GMP_is_prime(mpz_t n)
   prob_prime = llr(n);
   if (prob_prime == 0 || prob_prime == 2) return prob_prime;
 
-  /* If the number is of form N=k*2^n+1 and we have a fast proof, do it. */
-  if (is_proth_prime(n, 1) == 2) return 2;
-
   /* Start with BPSW */
   prob_prime = _GMP_BPSW(n);
   nbits = mpz_sizeinbase(n, 2);
@@ -1125,8 +1098,12 @@ int _GMP_is_prime(mpz_t n)
    * composite (and it cannot be if n < 2^64). */
 
   /* For small numbers, try a quick BLS75 n-1 proof. */
-  if (prob_prime == 1 && nbits <= 200)
-    prob_prime = _GMP_primality_bls_nm1(n, 1 /* effort */, 0 /* proof */);
+  if (prob_prime == 1) {
+    if (is_proth_form(n))
+      prob_prime = _GMP_primality_bls_nm1(n, 2 /* effort */, 0 /* cert */);
+    else if (nbits <= 200)
+      prob_prime = _GMP_primality_bls_nm1(n, 1 /* effort */, 0 /* cert */);
+  }
 
   /* If prob_prime is still 1, let's run some extra tests.  We could run
    * a Frobenius test or some random-base M-R tests.  The FU test is
