@@ -5,9 +5,10 @@ Revision history for Perl module Math::Prime::Util::GMP
     [ADDED]
 
     - is_llr_prime(p)           For k*2^n-1, returns -1, 0, or 2
-    - is_proth_prime(p)         For k*2^n+1, returns -1, 0 (MAYBE), or 2
 
     [PERFORMANCE]
+
+    - is_prime will prove many Proth-form (h*2^n+1) numbers.
 
 0.28 2014-11-17
 
